fix: testCode 관련 모든 오류 해결